tests/stage3/semantic_return_missing_i32.err
type error
line: 2
function: FN_P_1694585
missing return
expected: i32
