tests/stage3/semantic_return_missing_i32.imp
function bad() -> i32 {
}

function main() {
    return 0
}
